--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
+    "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
     "react-hot-loader": "^1.3.1",
     "sass-loader": "^6.0.6",
