--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
     "mysql": "^2.13.0",
+    "passport": "^0.3.2",
+    "passport-facebook": "^2.1.1",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-redux": "^5.0.5",
@@ -47,6 +49,7 @@
     "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
+    "npm-run-all": "^4.0.2",
     "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
     "react-hot-loader": "^1.3.1",
@@ -60,9 +63,9 @@
   "scripts": {
     "test": "mocha",
     "start": "npm-run-all --parallel open:front lint:watch",
-    "open:front":"babel-node server.js",
-    "lint":"node_modules/.bin/esw webpack.config.* src",
-    "lint:watch":"npm run lint -- --watch",
+    "open:front": "babel-node server.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src",
+    "lint:watch": "npm run lint -- --watch",
     "dev": "nodemon server.js"
   },
   "repository": {
