--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
+    "npm-run-all": "^4.0.2",
     "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
     "react-hot-loader": "^1.3.1",
@@ -60,9 +61,9 @@
   "scripts": {
     "test": "mocha",
     "start": "npm-run-all --parallel open:front lint:watch",
-    "open:front":"babel-node server.js",
-    "lint":"node_modules/.bin/esw webpack.config.* src",
-    "lint:watch":"npm run lint -- --watch",
+    "open:front": "babel-node server.js",
+    "lint": "node_modules/.bin/esw webpack.config.* src",
+    "lint:watch": "npm run lint -- --watch",
     "dev": "nodemon server.js"
   },
   "repository": {
