--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-watch": "^3.1.2",
     "eventsource-polyfill": "^0.9.6",
+    "jest": "^20.0.4",
     "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
@@ -66,7 +67,8 @@
     "open:front": "babel-node server.js",
     "lint": "node_modules/.bin/esw webpack.config.* src",
     "lint:watch": "npm run lint -- --watch",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
