--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
+    "materialize-css": "^0.100.1",
+    "mongoose": "^4.11.7",
     "mysql": "^2.13.0",
     "passport": "^0.3.2",
     "passport-facebook": "^2.1.1",
@@ -29,6 +31,7 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
+    "react-materialize": "^1.0.8",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "redux": "^3.7.2",
