--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
+    "faker": "^4.1.0",
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
@@ -50,6 +51,7 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "chai": "^3.5.0",
     "css-loader": "^0.28.4",
     "eslint": "^4.3.0",
@@ -72,13 +74,12 @@
     "test": "jest",
     "test:front": "npm run test",
     "start": "npm-run-all --parallel open:front lint:watch",
-    "open:front": "babel-node server.js",
+    "open:front": "nodemon server.js",
     "dev:front": "node serverDev.js",
     "lint": "node_modules/.bin/esw webpack.config.* src",
     "lint:watch": "npm run lint -- --watch",
     "dev": "npm-run-all --parallel dev:front lint:watch",
-
-    "production":"webpack && node server.js"
+    "production": "webpack && node server.js"
   },
   "repository": {
     "type": "git",
