--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^1.3.1",
-    "react-materialize": "^1.0.8",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
     "semantic-ui-react": "^0.70.0",
     "sequelize": "^3.30.4",
@@ -76,7 +76,7 @@
     "start": "npm-run-all --parallel open:front lint:watch",
     "open:front": "nodemon server.js",
     "dev:front": "node serverDev.js",
-    "lint": "node_modules/.bin/esw webpack.config.* src",
+    "lint": "node_modules/.bin/esw webpack.config.* ",
     "lint:watch": "npm run lint -- --watch",
     "dev": "npm-run-all --parallel dev:front lint:watch",
     "production": "webpack && node server.js"
