--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cloudinary-react": "^1.0.4",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
+    "enzyme": "^2.9.1",
     "express": "^4.15.2",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.2",
@@ -47,6 +48,7 @@
     "babel-cli": "^6.24.1",
     "babel-core": "^6.25.0",
     "babel-loader": "^7.1.0",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
@@ -59,6 +61,7 @@
     "eslint-plugin-react": "^7.1.0",
     "eslint-watch": "^3.1.2",
     "eventsource-polyfill": "^0.9.6",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^20.0.4",
     "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
@@ -66,19 +69,26 @@
     "npm-run-all": "^4.0.2",
     "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
+    "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
     "webpack-dev-server": "^1.16.5"
   },
+
+  "jest":{
+    "moduleNameMapper": {
+      "^.+\\.(css|less|scss)$": "identity-obj-proxy"
+    }
+  },
   "scripts": {
     "test": "jest",
-    "test:front": "npm run test",
-    "start": "npm-run-all --parallel open:front lint:watch",
+    "test:front": "npm test -- --watch",
+    "start": "npm-run-all --parallel open:front lint:watch test:front",
     "open:front": "nodemon server.js",
     "dev:front": "node serverDev.js",
     "lint": "node_modules/.bin/esw webpack.config.* ",
     "lint:watch": "npm run lint -- --watch",
-    "dev": "npm-run-all --parallel dev:front lint:watch",
+    "dev": "npm-run-all --parallel dev:front lint:watch test:front",
     "production": "webpack && node server.js"
   },
   "repository": {
