--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "request": "^2.81.0",
