--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "bcryptjs": "^2.4.3",
     "chai": "^3.5.0",
     "css-loader": "^0.28.4",
+    "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-react": "^7.1.0",
