--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.7",
     "mysql": "^2.13.0",
-    "passport": "^0.3.2",
+    "passporft": "^0.3.2",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-linkedin": "^1.0.0",
