--- a/package.json
+++ b/package.json
@@ -7,38 +7,36 @@
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
     "body-parser": "^1.17.1",
-    "chai": "^3.5.0",
     "cloudinary": "^1.9.0",
     "cloudinary-react": "^1.0.4",
+    "connect-flash": "^0.1.1",
+    "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
-    "enzyme": "^2.9.1",
     "express": "^4.15.2",
-    "express-handlebars": "^3.0.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.15.2",
     "faker": "^4.1.0",
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.11.7",
-    "mysql": "^2.13.0",
-    "passporft": "^0.3.2",
+    "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
     "passport-google-oauth": "^1.0.0",
     "passport-linkedin": "^1.0.0",
     "passport-local": "^1.0.0",
     "passport-twitter": "^1.0.4",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1",
+    "prop-types": "^15.6.0",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-hot-loader": "^1.3.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.2.2",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
-    "request": "^2.81.0",
     "semantic-ui-react": "^0.70.0",
-    "sequelize": "^3.30.4",
     "webpack": "^3.5.4",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^1.14.1",
@@ -53,8 +51,8 @@
     "babel-plugin-transform-object-rest-spread": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-watch": "^2.0.7",
     "bcryptjs": "^2.4.3",
-    "chai": "^3.5.0",
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
@@ -64,7 +62,6 @@
     "eventsource-polyfill": "^0.9.6",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^20.0.4",
-    "mocha": "^3.4.1",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
     "npm-run-all": "^4.0.2",
@@ -72,8 +69,7 @@
     "react-edit-inline": "^1.0.8",
     "react-test-renderer": "^15.6.1",
     "sass-loader": "^6.0.6",
-    "style-loader": "^0.18.2",
-    "webpack-dev-server": "^1.16.5"
+    "style-loader": "^0.18.2"
   },
   "jest": {
     "moduleNameMapper": {
@@ -84,7 +80,7 @@
     "test": "jest",
     "test:front": "npm test -- --watch",
     "start": "npm-run-all --parallel open:front lint:watch test:front",
-    "open:front": "nodemon server.js",
+    "open:front": "babel-watch server.js",
     "dev:front": "node serverDev.js",
     "lint": "node_modules/.bin/esw webpack.config.* ",
     "lint:watch": "npm run lint -- --watch",
@@ -95,7 +91,7 @@
     "type": "git",
     "url": "git+https://github.com/cbrannon/Tab-Nabbers.git"
   },
-  "author": "",
+  "author": "Bootcruit",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/cbrannon/Tab-Nabbers/issues"
