--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.0",
     "react-router-dom": "^4.2.2",
+    "react-toastr": "^3.0.0",
     "redux": "^3.7.2",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
