--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
+    "moment": "^2.19.2",
     "mongoose": "^4.11.7",
     "passport": "^0.4.0",
     "passport-facebook": "^2.1.1",
