--- a/package.json
+++ b/package.json
@@ -43,7 +43,8 @@
     "webpack": "^3.5.4",
     "webpack-dev-middleware": "^1.12.0",
     "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.18.2"
+    "webpack-hot-middleware": "^2.18.2",
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
