--- a/front/package.json
+++ b/front/package.json
@@ -44,6 +44,8 @@
   },
   "devDependencies": {
     "css-loader": "^0.28.7",
+    "node-sass": "^4.7.2",
+    "sass-loader": "^6.0.6",
     "style-loader": "^0.19.0"
   },
   "scripts": {
