--- a/package.json
+++ b/package.json
@@ -6,29 +6,18 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
-    "body-parser": "^1.17.1",
     "cloudinary": "^1.9.0",
     "cloudinary-react": "^1.0.4",
-    "connect-flash": "^0.1.1",
-    "connect-mongo": "^2.0.0",
     "cookie-parser": "^1.4.3",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "express-flash": "0.0.2",
-    "express-session": "^1.15.2",
     "faker": "^4.1.0",
     "formidable": "^1.1.1",
     "fs-extra": "^3.0.1",
     "jsonwebtoken": "^7.4.1",
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
-    "mongoose": "^4.11.7",
-    "passport": "^0.4.0",
-    "passport-facebook": "^2.1.1",
-    "passport-google-oauth": "^1.0.0",
-    "passport-linkedin": "^1.0.0",
-    "passport-local": "^1.0.0",
-    "passport-twitter": "^1.0.4",
+    "mongoose": "^5.0.2",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
@@ -43,10 +32,6 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
-    "webpack": "^3.5.4",
-    "webpack-dev-middleware": "^1.12.0",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-hot-middleware": "^2.18.2",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
@@ -71,6 +56,7 @@
     "jest": "^20.0.4",
     "nightmare": "^2.10.0",
     "node-sass": "^4.5.3",
+    "nodemon": "^1.14.11",
     "npm-run-all": "^4.0.2",
     "open": "0.0.5",
     "react-edit-inline": "^1.0.8",
@@ -86,13 +72,13 @@
   "scripts": {
     "test": "jest",
     "test:front": "npm test -- --watch",
-    "start": "npm-run-all --parallel open:front lint:watch test:front",
-    "open:front": "babel-watch server.js",
-    "dev:front": "node serverDev.js",
+    "start": "npm-run-all --parallel front back",
+    "front": "cd front && npm start",
+    "build":"cd front && npm run build",
+    "back": "nodemon server.js",
     "lint": "node_modules/.bin/esw webpack.config.* ",
     "lint:watch": "npm run lint -- --watch",
-    "dev": "npm-run-all --parallel dev:front lint:watch test:front",
-    "production": "webpack && node server.js"
+    "production": "npm-run-all build back"
   },
   "repository": {
     "type": "git",
