--- a/.env-example
+++ b/.env-example
@@ -16,4 +16,9 @@ FACEBOOK_CLIENT_SECRET=
 
 MEET_UP_KEY=
 
+DB_URL=mongodb://testAccount:password@ds161483.mlab.com:61483/tab_nabbers_test_db
 
+STUDENT_SECRET=
+
+
+NODE_ENVIROMENT=development
