--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
-    "wowjs": "^1.1.3"
+    "wowjs": "^1.1.3",
+    "bcryptjs": "^2.4.3"
+    
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -44,7 +46,6 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-watch": "^2.0.7",
-    "bcryptjs": "^2.4.3",
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
     "eslint": "^4.3.0",
