--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "lodash": "^4.17.4",
     "moment": "^2.19.2",
     "mongoose": "^5.0.2",
+    "nodemailer": "^4.4.2",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "prop-types": "^15.6.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
