Adding error and replacing old css style with semantic

--- a/.env-example
+++ b/.env-example
@@ -16,9 +16,18 @@ FACEBOOK_CLIENT_SECRET=
 
 MEET_UP_KEY=
 
-DB_URL=mongodb://testAccount:password@ds161483.mlab.com:61483/tab_nabbers_test_db
+DB_URL=
 
-STUDENT_SECRET=
+STUDENT_SECRET=Iamtestingthisshitoutandseeifitworks
 
 
-NODE_ENVIROMENT=development
+NODE_ENVIROMENT=PRODUCTION
+
+
+
+SENDGRID_USERNAME=
+
+SENDGRID_PASSWORD=
+
+
+SECRET=Tabnabbersisawesome
