--- a/.env-example
+++ b/.env-example
@@ -11,12 +11,14 @@ LINKED_SECRET=
 
 
 FACEBOOK_CLIENT_ID=
-FACEBOOK_CLIENT_SECRET=
 
 
 MEET_UP_KEY=
 
-DB_URL=
+
+EVENTBRITE_KEY=
+
+DB_URL=mongodb://testAccount:password@ds161483.mlab.com:61483/tab_nabbers_test_db
 
 STUDENT_SECRET=Iamtestingthisshitoutandseeifitworks
 
