--- a/.env-example
+++ b/.env-example
@@ -11,12 +11,13 @@ LINKED_SECRET=
 
 
 FACEBOOK_CLIENT_ID=
+FACEBOOK_CLIENT_SECRET=
 
 
 MEET_UP_KEY=
 
 
-EVENTBRITE_KEY=
+EVENTBRITE_KEY=RBDUSLYTIMGL62Z46VBX
 
 DB_URL=mongodb://testAccount:password@ds161483.mlab.com:61483/tab_nabbers_test_db
 
