--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "axios": "^0.16.2",
     "babel-polyfill": "^6.23.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.9.0",
     "cloudinary-react": "^1.0.4",
     "cookie-parser": "^1.4.3",
@@ -21,6 +22,7 @@
     "nodemailer": "^4.4.2",
     "nodemailer-sendgrid-transport": "^0.2.0",
     "prop-types": "^15.6.0",
+    "query-string": "^5.1.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-hot-loader": "^1.3.1",
@@ -34,8 +36,7 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
-    "wowjs": "^1.1.3",
-    "bcryptjs": "^2.4.3"
+    "wowjs": "^1.1.3"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
