--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-promise-middleware": "^5.0.0",
     "redux-thunk": "^2.2.0",
     "semantic-ui-react": "^0.70.0",
+    "stringquery": "^1.0.7",
     "wowjs": "^1.1.3"
   },
   "devDependencies": {
