--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "nodemailer-sendgrid-transport": "^0.2.0",
     "prop-types": "^15.6.0",
     "query-string": "^5.1.0",
+    "querystring": "^0.2.0",
     "react": "^15.6.2",
     "react-dom": "^15.6.2",
     "react-hot-loader": "^1.3.1",
